fix for white h1/h2 on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -36,10 +36,12 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: black;
 }
 
 h2 {
   font-size: 1.2rem;
+  color: black;
   /* padding-top: 0em; */
 }
 
